[package]
name = "DPC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
hex = "0.4.3"
p256 = "0.13.2"  # ECDSA and other elliptic curve functionalities
rand = "0.8.5"   # For generating keys in examples, not typically used in production